# capn_proto

./: .gitignore  Cargo.toml
seq/: seq1.pu  seq2.pu
src/: build.rs  client.rs  main.rs  server.rs  subscribe_client.rs
src/schema/: hello_world.capnp
