[package]
name = "capn_proto"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
capnp = { version = "0.20.6" }
capnp-rpc = { version = "0.20.3" }
capnp-futures = { version = "0.20.1" }
futures = "0.3.0"
tokio = { version = "1.36.0", features = ["net", "rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
anyhow = "1.0"

[build-dependencies]
capnpc = "0.20.1"
